Get samplerate from timer, noinline writebyte
Will this finally fix issues with newer gcc?

--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -25,7 +25,7 @@ DATA		:=	data
 #---------------------------------------------------------------------------------
 ARCH	:=	-marm -mthumb-interwork#-mthumb
 
-CFLAGS	:=	-g -Wall -O2\
+CFLAGS	:=	-g -Wall -O2 -nostdlib \
  			-march=armv5te -mtune=arm946e-s -fomit-frame-pointer\
 			-ffast-math \
 			$(ARCH)
