Don't reset when rate remains the same
- Also no longer using libnds, freeing up some space in itcm :smile:
- Moved some code to vram
- Fast copy function

--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -40,7 +40,7 @@ LDFLAGS	=	-specs=../ds_arm9_gbarunner.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
 #---------------------------------------------------------------------------------
 # any extra libraries we wish to link with the project
 #---------------------------------------------------------------------------------
-LIBS	:=	-lnds9
+LIBS	:=	
  
 #---------------------------------------------------------------------------------
 # list of directories containing libraries, this must be the top level containing
