Sav files are now being read...
... writing has not been implemented yet, but you can at least load your
save files. They should have the same name as the gba file but instead
of .gba they should be .sav

--- a/Makefile_isnitro
+++ b/Makefile_isnitro
@@ -10,6 +10,8 @@ include $(DEVKITARM)/ds_rules
 export TARGET		:=	$(shell basename $(CURDIR))
 export TOPDIR		:=	$(CURDIR)
 
+export ISNITRODEBUG := 1
+
 
 .PHONY: arm7/$(TARGET).elf arm9/$(TARGET).elf
 
