Save patches for all 64 kb flash games

--- a/arm9/arm9.vcxproj.filters
+++ b/arm9/arm9.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="source\save\FlashSave.vram.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\save\Save.vram.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="build\BarShadow_nbfc.h">
@@ -210,6 +213,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\save\FlashSave.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\save\Save.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
