--- a/arm9/arm9.vcxproj
+++ b/arm9/arm9.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="source\math.vram.c" />
     <ClCompile Include="source\qsort.vram.cpp" />
     <ClCompile Include="source\save\FlashSave.vram.cpp" />
+    <ClCompile Include="source\save\Save.vram.cpp" />
     <ClCompile Include="source\sd_access.cpp" />
     <ClCompile Include="source\string.vram.cpp" />
     <ClCompile Include="source\vector.vram.cpp" />
@@ -219,6 +220,7 @@
     <ClInclude Include="source\math.h" />
     <ClInclude Include="source\qsort.h" />
     <ClInclude Include="source\save\FlashSave.h" />
+    <ClInclude Include="source\save\Save.h" />
     <ClInclude Include="source\sd_access.h" />
     <ClInclude Include="source\string.h" />
     <ClInclude Include="source\vector.h" />
