--- a/arm9/arm9.vcxproj
+++ b/arm9/arm9.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="source\init.cpp" />
     <ClCompile Include="source\math.vram.c" />
     <ClCompile Include="source\qsort.vram.cpp" />
+    <ClCompile Include="source\save\EepromSave.vram.cpp" />
     <ClCompile Include="source\save\FlashSave.vram.cpp" />
     <ClCompile Include="source\save\Save.vram.cpp" />
     <ClCompile Include="source\sd_access.cpp" />
@@ -219,6 +220,7 @@
     <ClInclude Include="source\LinkedList.h" />
     <ClInclude Include="source\math.h" />
     <ClInclude Include="source\qsort.h" />
+    <ClInclude Include="source\save\EepromSave.h" />
     <ClInclude Include="source\save\FlashSave.h" />
     <ClInclude Include="source\save\Save.h" />
     <ClInclude Include="source\sd_access.h" />
