--- a/arm9/arm9.vcxproj.filters
+++ b/arm9/arm9.vcxproj.filters
@@ -249,8 +249,6 @@
     <None Include="source\emu\handle_address_read_table.s" />
     <None Include="source\emu\handle_address_write.s" />
     <None Include="source\emu\handle_address_write_table.s" />
-    <None Include="source\emu\handle_instructions_arm.s" />
-    <None Include="source\emu\handle_instructions_thumb.s" />
     <None Include="source\emu\irq.s" />
     <None Include="source\emu\snd.s" />
     <None Include="source\emu\timer.s" />
@@ -274,5 +272,8 @@
     <None Include="data\RobotoMedium13.ntft" />
     <None Include="data\RobotoRegular10.ntft" />
     <None Include="source\bios.s" />
+    <None Include="source\emu\cpuArmHi.s" />
+    <None Include="source\emu\cpuThumb.s" />
+    <None Include="source\emu\cpuArmLo.s" />
   </ItemGroup>
 </Project>
