Fix sram mirrors and sram 32 bit writes, dma fixes Dmas to/from invalid memory, read of dma busy for sound, attempt to make dma only start on busy 0->1 transitions

--- a/arm7/arm7.vcxproj
+++ b/arm7/arm7.vcxproj
@@ -110,6 +110,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\dldi_handler.cpp" />
+    <ClCompile Include="source\gbsound.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\save.cpp" />
     <ClCompile Include="source\sound.cpp" />
@@ -117,6 +118,7 @@
   <ItemGroup>
     <ClInclude Include="source\dldi_handler.h" />
     <ClInclude Include="source\fifo.h" />
+    <ClInclude Include="source\gbsound.h" />
     <ClInclude Include="source\lock.h" />
     <ClInclude Include="source\save.h" />
     <ClInclude Include="source\sound.h" />
