--- a/arm7/arm7.vcxproj.filters
+++ b/arm7/arm7.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="source\sound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\gbsound.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\dldi_handler.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\timer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\gbsound.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
