--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,23 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
-- script: echo Hello, world!
+- task: DownloadSecureFile@1
+  inputs:
+    secureFile: 'devkitPro.zip.001'
+
+- task: DownloadSecureFile@1
+  inputs:
+    secureFile: 'devkitPro.zip.002'
+
+- task: DownloadSecureFile@1
+  inputs:
+    secureFile: 'devkitPro.zip.003'
+
+- task: DownloadSecureFile@1
+  inputs:
+    secureFile: 'devkitPro.zip.004'
+
+- script: echo %Agent.TempDirectory%
   displayName: 'Run a one-line script'
 
 - script: |
