Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,28 +41,28 @@ steps:
 - script: |
     cd $(Build.Repository.LocalPath)
     make
-    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi.nds    
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi.nds    
     make clean
   displayName: 'Build arm9dldi'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ENABLE_WRAM_ICACHE=1
-    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi_wramicache.nds
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm9dldi_wramicache.nds
     make clean
   displayName: 'Build arm9dldi_wramicache'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ARM7_DLDI=1
-    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi.nds    
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi.nds    
     make clean
   displayName: 'Build arm7dldi'
 
 - script: |
     cd $(Build.Repository.LocalPath)
     make all ARM7_DLDI=1 ENABLE_WRAM_ICACHE=1
-    move GBARunner2.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_wramicache.nds    
+    move s.nds $(Build.Repository.LocalPath)\build\GBARunner2_arm7dldi_wramicache.nds    
     make clean
   displayName: 'Build arm7dldi_wramicache'
 
