Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ steps:
 
 - task: GitHubRelease@0
   inputs:
-    gitHubConnection: Gericom
+    gitHubConnection: Gericom2
     repositoryName: '$(Build.Repository.Name)'
     action: 'create'
     target: '$(Build.SourceVersion)'
