Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,12 +66,14 @@ steps:
   inputs:
     targetPath: '$(Build.Repository.LocalPath)\\build'
     artifact: 'GBARunner2 Build'
-
+    
 - task: GitHubRelease@0
   inputs:
     gitHubConnection: Gericom2
     repositoryName: '$(Build.Repository.Name)'
     action: 'create'
     target: '$(Build.SourceVersion)'
-    tagSource: 'auto'
+    tagSource: 'manual'
+    tag: 'commit_$(Build.SourceVersion)'
     assets: '$(Build.Repository.LocalPath)/build/*'
+    addChangeLog: false
