--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -48,7 +48,7 @@ GIT_HASH := $(shell git rev-parse HEAD)
 GIT_DATE := $(shell git log -1 "--date=format:%d-%m-%Y %H:%M" --pretty=format:%cd)
 GIT_BRANCH := $(shell git rev-parse --abbrev-ref HEAD)
 
-CFLAGS += -DGIT_COMMIT_HASH="$(GIT_HASH)" -DGIT_COMMIT_DATE="$(GIT_DATE)" -DGIT_BRANCH="$(GIT_BRANCH)"
+CFLAGS += "-DGIT_COMMIT_HASH=$(GIT_HASH)" "-DGIT_COMMIT_DATE=$(GIT_DATE)" "-DGIT_BRANCH=$(GIT_BRANCH)"
 
 
 CXXFLAGS	:=	$(CFLAGS) -fno-rtti -fno-exceptions -fnon-call-exceptions
