--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -44,9 +44,9 @@ ifdef ENABLE_WRAM_ICACHE
 	CFLAGS	+=  -DENABLE_WRAM_ICACHE
 endif
 
-GIT_HASH := $(shell git rev-parse HEAD)
-GIT_DATE := $(shell git log -1 "--date=format:%d-%m-%Y %H:%M" --pretty=format:%cd)
-GIT_BRANCH := $(shell git rev-parse --abbrev-ref HEAD)
+GIT_HASH := hash #$(shell git rev-parse HEAD)
+GIT_DATE := date #$(shell git log -1 "--date=format:%d-%m-%Y %H:%M" --pretty=format:%cd)
+GIT_BRANCH := branch #$(shell git rev-parse --abbrev-ref HEAD)
 
 CFLAGS += "-DGIT_COMMIT_HASH=$(GIT_HASH)" "-DGIT_COMMIT_DATE=$(GIT_DATE)" "-DGIT_BRANCH=$(GIT_BRANCH)"
 
