--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -45,10 +45,10 @@ ifdef ENABLE_WRAM_ICACHE
 endif
 
 GIT_HASH := hash #$(shell git rev-parse HEAD)
-GIT_DATE := date #$(shell git log -1 "--date=format:%d-%m-%Y %H:%M" --pretty=format:%cd)
-GIT_BRANCH := branch #$(shell git rev-parse --abbrev-ref HEAD)
+#GIT_DATE := date #$(shell git log -1 "--date=format:%d-%m-%Y %H:%M" --pretty=format:%cd)
+#GIT_BRANCH := branch #$(shell git rev-parse --abbrev-ref HEAD)
 
-#CFLAGS += "-DGIT_COMMIT_HASH=$(GIT_HASH)" "-DGIT_COMMIT_DATE=$(GIT_DATE)" "-DGIT_BRANCH=$(GIT_BRANCH)"
+CFLAGS +=  -DGIT_COMMIT_HASH=$(GIT_HASH) #"-DGIT_COMMIT_DATE=$(GIT_DATE)" "-DGIT_BRANCH=$(GIT_BRANCH)"
 
 
 CXXFLAGS	:=	$(CFLAGS) -fno-rtti -fno-exceptions -fnon-call-exceptions
