--- a/arm9/Makefile
+++ b/arm9/Makefile
@@ -45,8 +45,8 @@ ifdef ENABLE_WRAM_ICACHE
 endif
 
 GIT_HASH := $(shell git rev-parse HEAD)
-GIT_DATE := date#$(shell git log -1 "--date=format:%d-%m-%Y %H:%M" --pretty=format:%cd)
-GIT_BRANCH := $(shell git describe --all --exact-match | sed 's/heads\///')
+GIT_DATE := $(shell git log -1 "--date=format:%d-%m-%Y\ %H:%M" --pretty=format:%cd)
+GIT_BRANCH := $(shell git describe --all --exact-match | sed 's/heads\///' | sed 's/remotes\/origin\///')
 
 CFLAGS +=  -DGIT_COMMIT_HASH=$(GIT_HASH) -DGIT_COMMIT_DATE=$(GIT_DATE) -DGIT_BRANCH=$(GIT_BRANCH)
 
